// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`markdown AI util > 1 line -> large text 1`] = `
"ADD: # Document Title

ADD: Test

CHANGED: This is the first sentence of the document.

ADD: ## Introduction

ADD: The introduction provides an overview of the document's purpose and structure.

ADD: ## Main Content

ADD: The main content section contains the bulk of the information.

ADD: ### Subsection 1

ADD: Details about the first subsection are provided here.

ADD: ### Subsection 2

ADD: Details about the second subsection are provided here.

ADD: ## Conclusion

ADD: The conclusion summarizes the key points discussed in the document.

ADD: ## References

ADD: A list of references and resources used in the document.
"
`;

exports[`markdown AI util > 3 lines -> 1 line 1`] = `
"CHANGED: mestis

REMOVE: Test

REMOVE: This
"
`;

exports[`markdown AI util > 3 lines -> large text 1`] = `
"CHANGED: # Document Title

ADD: Test

CHANGED: This is the first sentence of the document.

ADD: ## Introduction

ADD: The introduction provides an overview of the document's purpose and structure.

ADD: ## Main Content

ADD: The main content section contains the bulk of the information.

ADD: ### Subsection 1

ADD: Details about the first subsection are provided here.

CHANGED: ### Subsection 2

ADD: Details about the second subsection are provided here.

ADD: ## Conclusion

ADD: The conclusion summarizes the key points discussed in the document.

ADD: ## References

ADD: A list of references and resources used in the document.
"
`;

exports[`markdown AI util > add sentence at end 1`] = `
"UNCHANGED: # title

UNCHANGED: hello

ADD: world
"
`;

exports[`markdown AI util > add sentence at middle 1`] = `
"UNCHANGED: # title

UNCHANGED: hello

ADD: beautiful

UNCHANGED: world
"
`;

exports[`markdown AI util > add sentence at start 1`] = `
"ADD: prefix

UNCHANGED: # title

UNCHANGED: hello

UNCHANGED: world
"
`;

exports[`markdown AI util > change: text at end 1`] = `
"UNCHANGED: # title

UNCHANGED: hello

CHANGED: worlds
"
`;

exports[`markdown AI util > change: text at middle 1`] = `
"UNCHANGED: # title

CHANGED: hello there,

UNCHANGED: world
"
`;

exports[`markdown AI util > change: text at start 1`] = `
"CHANGED: # title

UNCHANGED: hello

UNCHANGED: world
"
`;

exports[`markdown AI util > change: type at end 1`] = `
"UNCHANGED: # title

UNCHANGED: hello

CHANGED: # world
"
`;

exports[`markdown AI util > change: type at start 1`] = `
"CHANGED: title

UNCHANGED: hello

CHANGED: wold
"
`;

exports[`markdown AI util > collapse lines 1`] = `
"CHANGED: # titleworldhello

REMOVE: hello
"
`;

exports[`markdown AI util > expand lines 1`] = `
"CHANGED: # title

ADD: hello
"
`;

exports[`markdown AI util > large text -> 1 line 1`] = `
"REMOVE: # Document Title

REMOVE: Test

CHANGED: hello

REMOVE: ## Introduction

REMOVE: The introduction provides an overview of the document's purpose and structure.

REMOVE: ## Main Content

REMOVE: The main content section contains the bulk of the information.

REMOVE: ### Subsection 1

REMOVE: Details about the first subsection are provided here.

REMOVE: ### Subsection 2

REMOVE: Details about the second subsection are provided here.

REMOVE: ## Conclusion

REMOVE: The conclusion summarizes the key points discussed in the document.

REMOVE: ## References

REMOVE: A list of references and resources used in the document.
"
`;

exports[`markdown AI util > large text -> 3 lines 1`] = `
"CHANGED: # title

REMOVE: Test

CHANGED: hello

REMOVE: ## Introduction

REMOVE: The introduction provides an overview of the document's purpose and structure.

REMOVE: ## Main Content

REMOVE: The main content section contains the bulk of the information.

REMOVE: ### Subsection 1

REMOVE: Details about the first subsection are provided here.

CHANGED: world

REMOVE: Details about the second subsection are provided here.

REMOVE: ## Conclusion

REMOVE: The conclusion summarizes the key points discussed in the document.

REMOVE: ## References

REMOVE: A list of references and resources used in the document.
"
`;

exports[`markdown AI util > lists: add list 1`] = `
"UNCHANGED: # title

ADD: *   hello there

ADD: *   world
"
`;

exports[`markdown AI util > lists: add list item 1`] = `
"UNCHANGED: # title

UNCHANGED: *   hello

ADD: *   world
"
`;

exports[`markdown AI util > lists: remove list 1`] = `
"UNCHANGED: # title

REMOVE: *   hello there

REMOVE: *   world
"
`;

exports[`markdown AI util > lists: remove list item 1`] = `
"UNCHANGED: # title

UNCHANGED: *   hello

REMOVE: *   world
"
`;

exports[`markdown AI util > lists: update list item 1`] = `
"UNCHANGED: # title

CHANGED: *   hello there

UNCHANGED: *   world
"
`;

exports[`markdown AI util > mixed: change and insert 1`] = `
"UNCHANGED: # title

CHANGED: hello there

ADD: beautiful

CHANGED: wold
"
`;

exports[`markdown AI util > remove sentence at end 1`] = `
"UNCHANGED: # title

UNCHANGED: hello

REMOVE: world
"
`;

exports[`markdown AI util > remove sentence at middle 1`] = `
"UNCHANGED: # title

REMOVE: hello

UNCHANGED: world
"
`;

exports[`markdown AI util > remove sentence at start 1`] = `
"REMOVE: # title

UNCHANGED: hello

UNCHANGED: world
"
`;
